# lib/db/src/schema/users.ts
@@ -4,6 +4,7 @@ export const usersTable = pgTable("users", {
   id: serial("id").primaryKey(),
   email: text("email").notNull().unique(),
   passwordHash: text("password_hash").notNull(),
+  tradition: text("tradition").default("No Preference").notNull(),
   createdAt: timestamp("created_at").defaultNow().notNull(),
 });
 
